# The actual runnable program is set to the SCRIPTS primitive.

## Prefix bin_ tells where to copy this
bin_SCRIPTS = src/main.py
etc_CONFIG = default.ini


# List of files to be distributed
EXTRA_DIST=  \
	$(bin_SCRIPTS) \
	src/*.py \
	src/ui/*.css \
	src/ui/*.py

# The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = \
	anubad.desktop
